--- a/style.css
+++ b/style.css
@@ -45,3 +45,41 @@
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.countainer {
+    margin-top: 5px;
+    margin-bottom: 50px;
+    border: 0px solid white;
+    border-radius: 3px;
+}
+
+.countainer p {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    text-align: center;
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(221, 108, 33);
+    padding-top: 17px;
+    padding-bottom: 17px;
+}
+.background img {
+    border: 0pc solid white;
+    border-radius: 5px;
+}
+.menu {
+    width: 100%;
+    background-color: rgb(119, 113, 113);
+    height: 50px;
+    border-radius: 3px;
+    border: 0px solid white;
+    margin-bottom: 1px;
+}
+
+td {
+    text-align: center;
+    padding-top: 12px;
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: red
+}
